force-app/main/default/objects/Spa_Partner__c/Spa_Partner__c.object-meta.xml
<CustomObject>
    <description>Junction Object Opportunity partner and Spa (Quote)</description>
    <label>Spa Partner</label>
    <nameField>
        <displayFormat>SP-{0000000}</displayFormat>
        <label>Spa Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spa Partner</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>