force-app/main/default/objects/Spa_Partner__c/fields/OpportnityId__c.field-meta.xml
<CustomField>
    <fullName>OpportnityId__c</fullName>
    <formula>Opportunity_Partner__r.Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportnityId</label>
    <type>Text</type>
</CustomField>