force-app/main/default/objects/Spa_Partner__c/fields/Opportunity_Partner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Partner</label>
    <referenceTo>Opportunity_Partner__c</referenceTo>
    <relationshipLabel>Spa Partner</relationshipLabel>
    <relationshipName>Spa_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>