force-app/main/default/objects/Spa_Partner__c/fields/Spa__c.field-meta.xml
<CustomField>
    <fullName>Spa__c</fullName>
    <label>Spa</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Spa Partner</relationshipLabel>
    <relationshipName>Spa_Partner</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>